# langchain-querit

./: CONTRIBUTING.md  MANIFEST.in  README.md  publish_guide.md  pyproject.toml  setup.py
.github/: pypi_publishing_guide.md
.github/workflows/: README.md  publish.yml
examples/: basic_usage.py
src/langchain_websearch/: __init__.py  core.py  querit_search.py
tests/: test_basic.py
